# perfit_avatar_service

./: .gitignore  .gitmodules  DOCKER_SETUP.md  Dockerfile  ECON_SETUP.md  PHOTOREALISTIC_TEXTURE_SETUP.md  TEXTURE_ALTERNATIVES.md  TEXTURE_SETUP.md  VIRTUAL_TRYON_SETUP.md  alembic.ini  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  server.py
alembic/: env.py
alembic/versions/: 001_add_color_fields.py
app/: config.py  main.py
app/api/routes/: __init__.py  avatar.py  fitting_room.py  garments.py  health.py
app/models/: database.py  schemas.py
app/services/: animation.py  cloth_physics.py  garment_extraction.py  garment_fitting.py  garment_reconstruction.py  image_validator.py  mesh_loader.py  skin_tone.py  storage.py
app/workers/: extraction_worker.py  fitting_worker.py  garment_worker.py
application/: workflow_dispatcher.py
application/activities/: __init__.py  econ_activity.py  image_processing_activity.py  storage_activity.py  texture_generation_activity.py
application/workflows/: CreateAvatarWf.py
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yaml
docs/: DESIGN.md  DESIGN_DECISIONS.md  IMPLEMENTATION.md  IMPLEMENTATION_APPROACH.md  IMPLEMENTATION_SUMMARY.md  LAYERING_CONFIG.md  ML_IMPLEMENTATION_GUIDE.md  MVP_IMPLEMENTATION_SUMMARY.md  PRODUCTION_READY.md  README.md  VIRTUAL_FITTING_ROOM.md
infrastructure/: temporal_worker.py
ml/: __init__.py
ml/hmr2/: __init__.py  inference.py
ml/measurements/: __init__.py  extractor.py
ml/smpl/: __init__.py
ml/smpl/models/: IMPLEMENTATION_PLAN.md  README.md
